chore: removed tx_count MV in detail token page